--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -43,8 +43,11 @@
 
 \chapter*{}
 
-\emph{Para Douglas Belchior e Adervaldo José dos Santos pelo compromisso
-com a luta antirracista.}
+\vfill
+\epigraph{}{\emph{Para Douglas Belchior e Adervaldo José dos Santos pelo compromisso
+com a luta antirracista.}}
+
+\thispagestyle{empty}
 
 \chapter{\emph{Pequena nota introdutória}}
 
@@ -83,15 +86,21 @@ enfrentar a barbárie imposta.
 É o que tenho a oferecer como trabalho de luto. Um trabalho que espero
 possibilite o amadurecimento de nossa luta.
 
-O autor
+\medskip
+
+\begin{flushright}
+\emph{O autor}
+\end{flushright}
 
 \part{FANON CONTRA O MISTICISMO}
 
-\begin{quote}
-Eu lhe direi: é o meio, é a sociedade que é responsável pela sua
+\vspace*{\fill}
+
+\epigraph{\emph{Eu lhe direi: é o meio, é a sociedade que é responsável pela sua
 mistificação. Isso dito, o resto virá por si só. E sabemos do que se
-trata. Do fim do mundo...(\emph{Fanon})
-\end{quote}
+trata. Do fim do mundo...}}{Fanon}
+
+\thispagestyle{empty}
 
 \chapter{Linguagem e identidade}
 
