--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -1,14 +1,9 @@
 \begin{itemize}
 
 
-\item \textbf{Michel Temer e o fascismo comum}, \lipsum[1]
+\item \textbf{Lugar de negro, lugar de branco?}, \lipsum[1]
   
-\item \textbf{Tales Ab’Sáber}, psicanalista e ensaísta, é professor de Filosofia da Psicanálise da Universidade Federal 
-de São Paulo (\textsc{unifesp}), autor de 
-\emph{Lulismo, carisma pop e cultura anticrítica},
-\textit{O~sonhar
-restaurado: formas do sonhar em Bion, Winnicott e Freud} e
-\textit{A música do tempo infinito}. 
+\item \textbf{Douglas Rodrigues Barros}, \lipsum[2] 
 
 \end{itemize}
 
