passando expressão regular de versal, hífen e ldots

--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -2,7 +2,7 @@
 
 \usepackage[post]{hedraoptions} 
 \usepackage[baruch]{hedrastyles}
-\usepackage[xetex,chicagofootnotes,swiftneue]{tipografia}
+\usepackage[xetex,chicagofootnotes]{tipografia} %,swiftneue
 
 \usepackage[standart]{toc}
 
