revisando e padronizando citações de todo livro

--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -17,6 +17,7 @@
 \usepackage{versos}
 
 
+\addtocontents{toc}{\vskip-5pt}
 %------------------------------------------ INCLUIR EPIGRAFE EM PART
 \let\oldafterpartskip\afterpartskip 
 
