--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -263,7 +263,7 @@ Como uma ficção ganha força material, molda a apreensão de um mundo e
 torna"-se motor do real? Como a realidade reduzida a aparência torna"-se
 ela própria só o aparente que por trás de si nada oculta senão seu vazio
 constitutivo? Se ``os adjetivos passam e os substantivos
-ficam'',\footnote{Machado de Assis.} o adjetivo \emph{negro} dado aos
+ficam'',\footnote{Machado de Assis, Diário do Rio de Janeiro, \emph{Balas de estalo}, 16/5/1885.} o adjetivo \emph{negro} dado aos
 indivíduos que viviam no antigamente conhecido ``continente
 sombrio'',\footnote{Para os antigos, a África era uma espécie de porta
   para o mundo dos mortos.} rapidamente foi substantivado e
@@ -338,8 +338,7 @@ O negro é o símbolo do espírito do mal e do demônio.\\
 O branco é o símbolo da luz\ldots{}\\
 O negro é o símbolo das trevas, e as trevas exprimem \qb{}simbolicamente o mal.\\
 O branco é o emblema da harmonia.\\
-O negro, o emblema do Caos.\footnote{Manual de Montabert, redigido para
-  artistas.}
+O negro, o emblema do Caos.\footnote{\versal{MONTABERT}, J-N. P. \emph{Traité complet de la peinture}, 9 vols (Paris: J.-F. Delion, 1829–51), vol. 7, pp. 422--3. Kératry, Annuaire de l'École.}
 \end{verse}
 
 A novidade de uma condição alheia àquele mundo, condição que durava mais
@@ -423,7 +422,7 @@ ontológica,\footnote{Ainda como diz Mbembe (\emph{op. cit.}, p. 39): ``O negro
   não existe enquanto tal. É constantemente produzido. Produzir o negro
   é produzir um vínculo social de submissão e um corpo de que nós
   chamamos de estado de raça corresponde, assim o cremos, a um estado de
-  degradação ontológica??''.} como do corpo social diferenciado por
+  degradação ontológica''.} como do corpo social diferenciado por
 este significante identitário redutor. Em nenhum momento pode"-se afirmar
 que essa redução de indivíduos ao corpo é uma anomalia pertencente ao
 passado, mas é, sim, a força motora oculta da modernidade capitalista, o
@@ -613,7 +612,7 @@ popular, senão a de fazer com que o popular se torne teórico. Basta de
   negro, como se para ele houvesse um empecilho natural, ligado à sua
   biologia e ao caráter, para entender conceitos e palavras não
   recorrentes no seu vocabulário supostamente infantil. A velha frase
-  tornada senso comum durante boa parte do século \versal{XX}: ``por ser ??um
+  tornada senso comum durante boa parte do século \versal{XX}: ``por ser um
   negro, você escreve/fala muito bem'' é também naturalizada pelos
   indivíduos negros que tomam o \emph{petit"-nègre} como um componente
   próprio. Assim, ao invés de se pôr alheio à linguagem da metrópole, ou
@@ -728,7 +727,7 @@ de mercadorias;
 A crise da modernidade não podendo mais concluir o circuito de constante reposição da falta -- quer dizer, o consumo
 realizado repõe o desejo de mais mercadorias -- as seguranças de
 realização desse indivíduo são solapadas e na busca de reafirmação,
-desse Si?? impossibilitado, novos apegos simbólicos são criados via
+desse Si impossibilitado, novos apegos simbólicos são criados via
 identidade;
 \item
 Embora haja a tentativa de redução do Eu a um agente do
@@ -1072,7 +1071,7 @@ que defendem uma submissão voluntária e a aceitação pelo indivíduo dos
 pressupostos colonialistas -- tidos como a totalidade concreta --, quanto aqueles que afirmam
 inexoravelmente um retorno às raízes pré"-coloniais\ldots{}
 
-\chapter{\emph{Weltanschauung} do negro}
+\chapter{\emph{Weltanschauung}\footnote{\emph{Weltanschauung} cuja tradução literal significa ``visão de mundo'' diz respeito ao etos ou à forma de vida alcançada a partir da compreensão da necessidade e a liberdade que daí advém. É um conceito que encontra grande influência em Hegel e depois se desdobra nas escolas hegelianas chegando ao existencialismo e à fenomenologia.} do negro}
 
 É a partir desse \emph{não"-lugar} que Fanon busca demonstrar a situação
 de completo expatriado do negro. Em \emph{A experiência vivida}, talvez
@@ -1086,7 +1085,7 @@ pela dolorosa cisão enfrentada pelo negro é o que sustenta sua realidade
 psíquica. A questão que podemos
 colocar para Fanon, que diz que ``Há, na \emph{Weltanschauung} de um
 povo colonizado, uma impureza, uma tara que proíbe qualquer explicação
-ontológica.'',\footnote{\versal{FANON}, \emph{idem}, p. 103.} é se essa proibição não
+ontológica'',\footnote{\versal{FANON}, \emph{idem}, p. 103.} é se essa proibição não
 desnuda toda a fragilidade da operação hegemônica colonial fundada no
 caráter mistificador socialmente produzido contra o negro.
 
@@ -1348,7 +1347,7 @@ repente a noção subjetiva, existencial, étnica da negritude ``passa'',
 como diz Hegel, para aquela -- objetiva, positiva, exata -- do
 proletariado. ``Para Césaire, diz Senghor, o ``branco'' simboliza o
 capital, como o negro o trabalho\ldots{} É a luta do proletariado mundial que
-canta através dos homens de pele negra de sua raça''?? É mais fácil
+canta através dos homens de pele negra de sua raça'' É mais fácil
 dizer, menos fácil pensar. Não é por acaso que os mais ardentes vates da
 negritude são, ao mesmo tempo, militantes marxistas. Mas isso não impede
 que a noção de raça não se confunda com a noção de classe: aquela é
@@ -1359,12 +1358,12 @@ partir da experiência. De fato, a negritude aparece como o tempo fraco
 de uma progressão dialética: a afirmação teórica e prática da supremacia
 do branco é a tese; a posição da negritude como valor antitético é o
 momento da negatividade. Mas este momento negativo não é
-autosuficiente??, e os negros que o utilizam o sabem bem; sabem que ele
+autosuficiente, e os negros que o utilizam o sabem bem; sabem que ele
 visa a preparação da síntese ou a realização do humano em uma sociedade
 sem raças. Assim, a negritude existe para se destruir; é passagem e
 ponto de chegada, meio e não fim último.\footnote{\versal{FANON}, 2008, p. 121,
   \emph{apud} Jean"-Paul Sartre. Orphée noir, prefácio à \emph{Anthologie de la
-  poésie nègre et malgache}, p. \versal{XL} \emph{et seq}.??}
+  poésie nègre et malgache}, p. \versal{XL} \emph{et seq}.}
 \end{quote}
 
 Se há uma posição relativa na ação dos negros tornada racializada no
@@ -1413,7 +1412,7 @@ da história elegem uma nação, uma raça, uma classe para reacender a
 chama, criando situações que só podem ser representadas ou superadas
 pela poesia; ora o impulso poético coincide com o impulso
 revolucionário, ora diverge. Saudemos, hoje, a oportunidade histórica
-que permite aos negros dar ``com tal determinação o grande grito negro
+que permite aos negros dar com tal determinação o grande grito negro
 que abalará os assentamentos do mundo.\footnote{\versal{FANON}, 2008, p. 121, \emph{apud}
   Sartre, \emph{idem}, p. \versal{XLIV}.}
 \end{quote}
@@ -1498,7 +1497,7 @@ torna a consciência imediatamente ato. Como nos fez entender Fichte lá
 atrás, porém, entre o Eu=Eu da consciência há uma infinidade de
 determinações\footnote{\versal{FICHTE}, J. \emph{A doutrina da ciência de 1794}.
   Tradução de Rubens Rodrigues Torres Filho. \emph{In}:
-  \_\_\_\_\_\_. \emph{Os pensadores}. São Paulo: Abril Cultural, 1984, p. 35-176.??}
+  \_\_\_\_\_\_. \emph{Os pensadores}. São Paulo: Abril Cultural, 1984, p. 35-176.}
 tendo em vista que é impossível escapar das mediações sobrepostas, uma
 vez que essa consciência é ser social.
 
@@ -1546,7 +1545,7 @@ ironicamente Sartre: ``a existência precede a essência''.\footnote{Nesse
   demonstramos que no cogito nós não descobrimos só a nós, mas também
   aos outros.'' (\versal{SARTRE}, J"-P. \emph{O existencialismo é um humanismo}.
   Tradução de Vergílio Ferreira. \emph{In}: \_\_\_\_\_\_. \emph{Os
-  pensadores}??. São Paulo: Abril Cultural, 1973, p. 21.)}
+  pensadores}. São Paulo: Abril Cultural, 1973, p. 21.)}
 
 \chapter{A radicalidade do pensamento de Fanon}
 
@@ -1559,11 +1558,11 @@ estamos às voltas com velhos problemas: neorracismo\footnote{Aqui
   discursos e representações que são outros tantos desenvolvimentos
   intelectuais do fantasma da profilaxia ou da segregação (necessidade
   de purificar o corpo social, de preservar a identidade do ``eu'', do
-  ``nós'', mediante a ??qualquer perspectiva de promiscuidade, de
+  ``nós'', mediante a qualquer perspectiva de promiscuidade, de
   mestiçagem, de invasão), e que se articulam em torno de estigmas da
-  alteridade (apelido, cor da pele, práticas religiosas).??'' \versal{BALIBAR} \&
-  \versal{WALLERSTEIN}. \emph{Race nation classe:} les identités ambigües??.
-  Paris: La Découverte, 1988, ??p. 31.} e busca do retorno às origens, o
+  alteridade (apelido, cor da pele, práticas religiosas).'' \versal{BALIBAR} \&
+  \versal{WALLERSTEIN}. \emph{Race nation classe:} les identités ambigües.
+  Paris: La Découverte, 1988, p. 31.} e busca do retorno às origens, o
 que naturalmente são faces de uma mesma moeda.
 
 Por meio de muita arrogância, pela primeira vez na história, operações
@@ -1638,7 +1637,7 @@ isso só demonstra sua atualidade. E se esta discussão não é somente para
 apresentá"-lo serve ao menos para lhe fazer, ainda que modestamente,
 justiça. Por que Fanon? Por que agora?\footnote{Estou me referindo à
   brilhante tese de \versal{FAUSTINO}, D. M. \emph{Por que Fanon, por que
-  agora?}: ??Frantz Fanon e os fanonismos no Brasil. 2015. Tese
+  agora?}: Frantz Fanon e os fanonismos no Brasil. 2015. Tese
   (Doutorado). Programa de Pós"-Graduação em Sociologia, Universidade
   Federal de São Carlos, São Carlos, \versal{SP}, 2015.} São questões que ressoam
 no solo de um mundo que se ergue sob o signo da catástrofe da escravidão
@@ -1874,7 +1873,7 @@ pelos olhares clínicos dos especialistas, vive hoje em estado de guerra
 permanente. Na Região Norte, em um único presídio tivemos a morte de 56
 presos em condições das quais os ``bárbaros'' se
 envergonhariam.\footnote{``Matança em presídio de Manaus é uma das maiores
-  desde Carandiru'', \emph{G1}, 02/01/2017.??}
+  desde Carandiru'', \emph{G1}, 02/01/2017.}
 
 Os números de assassinatos compreendidos entre 2005 e 2015 tiveram um
 aumento de 17,2\% entre indivíduos de 15 e 29 anos. Com 59 mil
@@ -2032,7 +2031,7 @@ uma invisibilidade social radical. ``Eliminado para os setores residuais
 daquele sistema, o negro ficou à margem do processo, retirando dele
 proveitos personalizados, secundários e ocasionais.''\footnote{\versal{FERNANDES},
   F. \emph{A integração do negro na sociedade de classes}: o legado da
-  raça branca. São Paulo: Globo, 2008, p. 36.??} Noutras palavras, a
+  raça branca. São Paulo: Globo, 2008, p. 36.} Noutras palavras, a
 possibilidade de integração do negro na sociedade foi solapada pelo
 processo de concorrência com o branco.
 
@@ -2061,7 +2060,7 @@ de \emph{dominação e escravidão} de um ponto de vista distópico, que
 muito tem a nos ensinar.\footnote{Não se pode esquecer, contudo, de
   Althusser, que pensa a noção de sujeição como interpelação, por
   exemplo, algo que será determinante para a crítica de Butler.
-  (\versal{ALTHUSSER}, L. \emph{Ideologia e aparelhos ideológicos de Estado??}. \emph{In}: \versal{ŽIŽEK}, S. (Org.) \emph{Um mapa da ideologia}. Rio de Janeiro: Contraponto, 1996, p. 105-142).??}
+  (\versal{ALTHUSSER}, L. \emph{Ideologia e aparelhos ideológicos de Estado}. \emph{In}: \versal{ŽIŽEK}, S. (Org.) \emph{Um mapa da ideologia}. Rio de Janeiro: Contraponto, 1996, p. 105-142).}
 
 Em primeiro lugar, invertidos os
 sinais da equação senhor/escravo, como resultado negativo não há uma
@@ -2591,7 +2590,7 @@ mito da ``democracia racial''.
 Postula o mito que a sobrevivência dos traços da cultura africana na
 sociedade brasileira teria sido o resultado de relações relaxadas e
 amigáveis entre senhores e escravos. Canções, danças, comidas,
-religiões, linguagem, ??de origem africana, presentes como elemento
+religiões, linguagem, de origem africana, presentes como elemento
 integral da cultura brasileira, seriam outros tantos comprovantes da
 ausência de preconceito e discriminação racial dos brasileiros
 ``brancos''.\footnote{\versal{NASCIMENTO}, \emph{op. cit.}, p. 55.}
@@ -3237,14 +3236,13 @@ os outros.
 
 \part{APÊNDICE}
 
-\chapter{Contra o retorno às raízes: identidade e identitarismo no centro
-do debate}
+\chapter{Contra o retorno às raízes:\\ identidade e identitarismo no centro do debate}
 
 A exaltação da identidade como algo
 fixo, absoluto, algo dado,
 pré"-existente, e não relativo é a pura expressão da forma de valorização
 do capital como fim em si mesmo, que precisa assegurar para alguns
-indivíduos uma colônia ainda viável de exploração
+indivíduos uma colônia ainda viável de exploração.
 
 Temos assistido no mundo, nos últimos anos, a um tsunami conservador
 que, mediante a falta de perspectivas sólidas e alternativas concretas à
@@ -3253,7 +3251,7 @@ filosofice barata, visando promover uma espécie de autoajuda para
 ``rebeldes''.
 
 No Brasil, porém, cujo recorte constitutivo"-social, historicamente, é
-africano e indígena -- mas também, europeu --; essa \emph{new wave} se
+africano e indígena -- mas também, europeu -- essa \emph{new wave} se
 apropriou de temas caros a essas matrizes culturais criando uma espécie
 de romantismo conservador adaptável ao mercado, que propõe uma espécie
 de retorno às origens e se marca pelo resgate de um local místico
