revisando traços e pontuação

--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -68,7 +68,7 @@ para além das miudezas e misérias cotidianas sob a égide do mundo da
 mercadoria.
 
 Competiu, desse modo, a parte da esquerda -- ou melhor, à esquerda
-hegemônica -- realizar o trabalho sujo com zelo\footnote{Trabalho muito
+hegemônica -- realizar o trabalho sujo com zelo:\footnote{Trabalho muito
   bem demonstrado por Francisco de Oliveira. ``Sindicatos de
   trabalhadores do setor privado também já estão organizando seus
   próprios fundos de previdência complementar, na esteira daqueles das
@@ -85,8 +85,8 @@ hegemônica -- realizar o trabalho sujo com zelo\footnote{Trabalho muito
   banqueiros, núcleo duro do \versal{PSDB}, e operários transformados em
   operadores de fundos de previdência, núcleo duro do \versal{PT}. A identidade
   dos dois casos reside no controle do acesso aos fundos públicos, no
-  conhecimento do `mapa da mina'.'' (\emph{Cf}. \versal{OLIVEIRA}, F. \emph{Crítica à
-  razão dualista/O ornitorrinco}. São Paulo: Boitempo, 2003, p. 146.)}:
+  conhecimento do `mapa da mina'". (\emph{Cf}. \versal{OLIVEIRA}, F. \emph{Crítica à
+  razão dualista/O ornitorrinco}. São Paulo: Boitempo, 2003, p. 146.)}
 se se matam milhares de jovens anualmente, a maioria negros, que
 importa? Pensemos em nosso próximo candidato...
 
@@ -501,7 +501,7 @@ todo caso a diferença radical já havia sido produzida e naturalizada.
 \chapter{A permanência de uma noção}
 
 Quatrocentos anos depois, quando eles já celebravam o esquecimento de um
-passado, no qual ``o tempero do mar foi lágrima de preto'',\footnote{Emicida.}
+passado, no qual ``o tempero do mar foi lágrima de preto'',\footnote{\versal{EMICIDA}. \emph{Boa Esperança}. São Paulo: Sobre Crianças, Quadris, Pesadelos e Lições de Casa\ldots{}, 2015.}
 e quando seus elementos dissociativos mais definidos pareciam se
 integrar suavemente às instituições democráticas, novos ecos do mesmo
 racismo chegavam com a morte de refugiados em suas praias.
@@ -834,7 +834,7 @@ embranquecimento já está todo articulado por uma posição cuja antinomia
 negro/branco está naturalizada e é aceita no registro simbólico.
 
 Essa abstração real da raça\footnote{Tomamos este termo emprestado de
-  Marx, para quem o capital é uma abstração real - empregamos aqui no
+  Marx, para quem o capital é uma abstração real -- empregamos aqui no
   mesmo sentido.} -- que ao mesmo tempo que fundamenta a relação social
 funda sua forma categorial -- é um processo no qual a justificação
 excludente se dá no plano sociossimbólico. Isso passará a governar os
@@ -876,7 +876,7 @@ A questão é muito simples: de pronto, tenta"-se justificar, pelo
 componente racial, a presença do injustificado trauma de abandono na
 infância. O paradoxo é que, sendo preto, não posso ser amado; e se for
 amado, e corresponder a esse amor, nada me garante que não estou me
-aproveitando dele -- ``como os pretos que adoram carne branca'' - por
+aproveitando dele -- ``como os pretos que adoram carne branca'' -- por
 ser preto igual aos outros. Resultado, não posso porque quero e não
 posso porque posso e serei igual aos outros. Com isso, uma patologia
 ligada ao trauma infantil é ocultada pelas limitações impostas pela
@@ -902,7 +902,7 @@ reivindicando uma representatividade limitante e limitada, mas
 transformar radicalmente esse próprio sistema de visibilidade cuja raiz
 está no sistema econômico"-social. É como se para o negro restasse não
 apenas a negação de sua posição imposta por um sistema de linguagem que
-o subordina - negação que permanece em seus limites simbólicos -, como
+o subordina -- negação que permanece em seus limites simbólicos --, como
 ainda é necessário negar o próprio espaço simbólico.
 
 A linguagem, com efeito, torna"-se uma via de mão dupla: por um lado, ela
@@ -914,7 +914,7 @@ proximidade com os modos dos ``civilizados'', ou seja, quanto maior for
 seu embranquecimento ou sua busca de uma fictícia negritude.
 
 Com efeito, a \emph{ideia} que se faz do negro, enquanto uma categoria
-cuja constituição é de subordinado - de um assujeitado sem ser sujeito -
+cuja constituição é de subordinado -- de um assujeitado sem ser sujeito --
 o reduz a caricatura e o coloca em termos limitados e limitantes
 definidos pela própria linguagem. Por isso ``Compreende"-se {[}\ldots{}{]} que
 a primeira reação do negro seja a de dizer \emph{não} àqueles que tentam
@@ -3360,7 +3360,7 @@ emotiva.\footnote{\emph{Cf}. \versal{ŽIŽEK}, S. \emph{O
   Boitempo, 2016.}
 
 Como dizia Frantz Fanon: ``Para nós, aquele que adora o preto é tão
-``doente'' quanto aquele que o execra. Inversamente, o negro que quer
+`doente' quanto aquele que o execra. Inversamente, o negro que quer
 embranquecer a raça é tão infeliz quanto aquele que prega o ódio ao
 branco.''\footnote{\emph{Ibidem}, p. 35.}
 
@@ -3381,7 +3381,7 @@ do toyotismo manipulatório. Desapareceu com esse colapso a \emph{ficção
 simbólica} com suas normas proibitivas que lança uma nova forma de
 \emph{ideal imaginário superegóico}. Noutras palavras, na total ausência
 de um Deus, outros deuses surgem -- sucesso social, busca pelo corpo
-perfeito, identidade estanque -, e o corpo passa a ser avaliado como
+perfeito, identidade estanque --, e o corpo passa a ser avaliado como
 empresa\ldots{}
 
 Não é à toa que formas reacionárias com suas ferozes figuras do supereu
@@ -3503,13 +3503,13 @@ branco.
 A coisa é ainda pior para a mulher negra, que ganha um terço do salário
 dos brancos e metade do salário de um homem negro. Não obstante, na
 maioria das vezes as mulheres negras ocupam o setor de serviços
-domésticos cuja porcentagem é de 19,2\%. comparada a 10,6\% de mulheres
+domésticos cuja porcentagem é de 19,2\% comparada a 10,6\% de mulheres
 não negras. Tais dados demonstram que a estruturação do mercado de
 trabalho detém um componente de racialização, legado da escravidão, que
 em tempos de precarização fatalmente incidirá negativamente sobre essa
 população.
 
-Lutar por tais demandas, isto é, pela equiparação dos salários é
+Lutar por tais demandas, isto é, pela equiparação dos salários, é
 obviamente uma demanda classista. Dada a estruturação racializada do
 mercado de trabalho brasileiro, tal demanda aponta para além de si
 própria ao desnudar as relações promíscuas e indecentes do sistema
@@ -3551,7 +3551,7 @@ governo; b) \emph{o modo como esse processo estrangula o próprio
 processo de produção, na reprodução do capital como fim em si mesmo, são
 solapadas, tornando patente que a violência é desencadeada em várias
 frentes, quer seja pela
-\emph{desposssessão},\footnote{Essa
+\emph{despossessão},\footnote{Essa
   noção é de David Harvey.} quer seja pela superexploração do trabalho.
 
 Daí que é preciso observar as
